# dubu-man

./: .gitignore  CMakeLists.txt  README.md  camera.cu  camera.cuh  cuda_timer.cuh  float3_extension.cuh  hittable.cuh  main.cu  ray.cuh  settings.cuh  util.cuh  vec3.cuh
dubu-man/: main.cu  settings.cuh
dubu-man/hittable/: hit_record.cuh  hittable.cuh  hittable_list.cuh  sphere.cuh
dubu-man/linalg/: camera.cu  camera.cuh  interval.cu  interval.cuh  trig.cuh  vec3.cuh
dubu-man/material/: dielectric.cu  dielectric.cuh  lambertian.cu  lambertian.cuh  material.cuh  metal.cu  metal.cuh
dubu-man/util/: checks.cuh  timer.cuh
